position: fixed gives blurry SVG images on iPad.

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ div, p, input, span {
 }
 
 #tile-stack-container {
-  position: fixed;
+  position: absolute;
   right: 0;
   top: 0;
   width: 120px;
@@ -66,7 +66,7 @@ div, p, input, span {
 }
 
 #tile-board-container {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 0;
@@ -162,7 +162,7 @@ svg .tile-segments {
 }
 
 .gameDisplay {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   display: flex;
@@ -213,6 +213,14 @@ svg .tile-segments {
 .gameDisplay-buttons .game-button:hover svg {
   transform: scale(1.1);
   fill: #333;
+}
+
+
+.mainGridContainer .gridDisplay {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  z-index: 1000;
 }
 
 
@@ -268,7 +276,7 @@ svg .tile-segments {
 
 
 .horizontal-controls .controlbar {
-  position: fixed;
+  position: absolute;
   left: 0;
   bottom: 0;
   height: 120px;
@@ -455,7 +463,7 @@ svg .tile-segments {
 }
 
 .mainMenuDisplay {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
